<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sm_panda_single_1</name>
  <version>2.3.18</version>
  <description>The sm_panda_single_1 package</description>
  <maintainer email="smacc2@smacc2.cool">SMACC2 is cool</maintainer>
  <license>Apache-2.0</license>
  <license>MyLicense</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libboost-thread-dev</depend>

  <depend>ros_timer_client</depend>
  <depend>smacc2</depend>
  <depend>moveit2z_client</depend>
  <depend>controller_manager</depend>
  <depend>moveit_resources_panda_moveit_config</depend>
  <depend>robot_state_publisher</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_planners_chomp</depend>
  <depend>pilz_industrial_motion_planner</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_plugins</depend>
  <depend>moveit_ros_robot_interaction</depend>
  <depend>moveit</depend>
  <depend>keyboard_client</depend>
  <depend>rclcpp</depend>
  <depend>ros_publisher_client</depend>


  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>isaac_ros_cumotion_moveit</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
